test/files/neg/t2102.scala
object Test {
  val x: Iterator[_] = new java.util.ArrayList[Int]().iterator
}
