test/files/neg/t2102.check
t2102.scala:2: error: type mismatch;
 found   : Iterator[Int] (in java.util)
 required: Iterator[_]   (in scala.collection)
  val x: Iterator[_] = new java.util.ArrayList[Int]().iterator
                                                      ^
one error found
